Make sure the link-edit dialog is visible when inside the rich-text editor of a note

--- a/client/src/components/editor/RichTextEditor.css
+++ b/client/src/components/editor/RichTextEditor.css
@@ -74,7 +74,7 @@
 }
 
 .editor-link-chooser {
-  z-index: 1300;
+  z-index: 1300 !important;
 }
 
 /* 
